refactor: Minor fix of .Rbuildignore syntax (requires savvy-cli 0.8.8)

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -11,7 +11,7 @@
 ^dev$
 ^src/Makevars$
 ^src/Makevars\.win$
-^src/rust/.cargo$
+^src/rust/\.cargo$
 ^src/rust/target$
 ^README\.Rmd$
 ^DEVELOPMENT\.md$
