--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,7 @@ Depends:
 Imports:
     rlang (>= 1.1.0)
 Suggests:
+    altdoc,
     arrow,
     bit64,
     blob,
@@ -34,6 +35,8 @@ Suggests:
     tibble,
     vctrs,
     withr
+Remotes:
+    etiennebacher/altdoc
 Additional_repositories: https://community.r-multiverse.org
 Config/Needs/dev: devtools, lifecycle, readr, glue
 Config/testthat/edition: 3
