do not setup python tools in CI

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -96,9 +96,10 @@ jobs:
           extra-packages: any::rcmdcheck
           needs: dev,website
 
-      - name: Get requirements
-        run: |
-          task setup-python-tools
+      # TODO: why was this in the pre-rewrite docs workflow?
+      # - name: Get requirements
+      #   run: |
+      #     task setup-python-tools
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
